create table post_index_dirties (
    post_id bigint not null comment '재색인 대상 게시글 ID (글당 1행, upsert 자연키)',
    version bigint not null comment 'ES external version 겸 삭제 가드 토큰 (markDirty마다 +1 단조 증가)',
    retry_count integer not null comment '색인 연속 실패 횟수 (백오프/격리 판단)',
    dirtied_at datetime(6) not null comment '마지막 더티 시각 (처리 순서/관측용)',
    next_retry_at datetime(6) null comment '다음 재시도 가능 시각 (NULL=즉시 처리 대상, 값=백오프 대기)',
    primary key (post_id)
) engine=InnoDB;
