Enum post_category {
    RESTAURANT
    HOTEL
    ACTIVITY
    SCENERY
  }

  Enum post_status {
    WRITING
    DRAFT
    PENDING
    PUBLISHED
    REJECTED
  }

Table members {
    member_id bigint [pk, increment]
    public_id varchar(36) [unique, not null, note: 'UUID, 발급 후 불변 — 외부 노출 식별자']
    email varchar(255) [unique, not null, note: 'BCrypt 아님 / trim+소문자 정규화 후 저장']
    password varchar(255) [not null, note: 'BCrypt']
    nickname varchar(50) [unique, not null, note: '공백 불가(^\\S+$)']
    profile_image_url varchar(500) [note: 'nullable']
    role varchar(20) [not null, note: '회원 권한 (MEMBER/ADMIN), 기본 MEMBER']
    point int [not null, default: 0, note: '보유 여가 포인트(원자적 @Modifying 증감), 원장은 point_histories']
    created_at timestamp [not null, note: '생성 시각(@CreatedDate)']
    updated_at timestamp [not null, note: '수정 시각(@LastModifiedDate)']
    deleted_at timestamp [note: '소프트 삭제 시각(nullable)']
  }

Table posts {
    post_id bigint [pk, increment]
    member_id bigint [not null, ref: > members.member_id, note: 'id-only 참조(DB FK 없음)']
    title varchar(50) [note: 'draft: nullable / PUBLISHED 시 필수']
    content text [note: 'draft: nullable / PUBLISHED 시 필수']
    status post_status [not null, note: '앱에서 설정 — 생성 시 WRITING']
    category post_category [note: 'nullable']
    view_count int [not null, default: 0, note: '비정규화 카운트(원자적 @Modifying 증감)']
    like_count int [not null, default: 0]
    bookmark_count int [not null, default: 0]
    region varchar(255) [note: '@Embedded PostLocation — 목록 카드 노출용']
    place_name varchar(255)
    address varchar(255)
    latitude double
    longitude double
    published_at timestamp [note: '공개 시각(PUBLISHED 전엔 null)']
    created_at timestamp [not null, note: '초안 최초 생성 시각']
    updated_at timestamp [not null, note: '마지막 수정(자동저장 포함) = 임시저장 시각']
    deleted_at timestamp [note: '소프트 삭제(게시글). 초안은 하드 삭제라 행이 사라짐']
  }

Table post_likes {
    post_like_id bigint [pk, increment, note: '대리키(복합 PK 아님)']
    member_id bigint [not null, ref: > members.member_id, note: 'id-only 참조']
    post_id bigint [not null, ref: > posts.post_id, note: 'id-only 참조']
    created_at timestamp [not null]

    indexes {
      (member_id, post_id) [unique, name: 'uk_post_like_member_post'] // 중복 좋아요 차단
    }
  }

Table post_bookmarks {
    post_bookmark_id bigint [pk, increment, note: '대리키(복합 PK 아님)']
    member_id bigint [not null, ref: > members.member_id, note: 'id-only 참조']
    post_id bigint [not null, ref: > posts.post_id, note: 'id-only 참조']
    created_at timestamp [not null]

    indexes {
      (member_id, post_id) [unique, name: 'uk_post_bookmark_member_post']
    }
  }

Table post_tags {
    post_tag_id bigint [pk, increment]
    post_id bigint [not null, ref: > posts.post_id, note: 'id-only 참조']
    post_tag_name varchar(255) [not null, note: '태그 이름 직접 저장(비정규화) — 별도 tags 테이블 없음. 검색/자동완성은 ES 담당']

    indexes {
      (post_id, post_tag_name) [unique, name: 'uk_post_tags_post_id_tag'] // 글당 중복 태그 차단
    }
  }

Table festivals {
  festival_id bigint [pk, increment]
  tour_content_id varchar(255) [not null, unique, note: 'TourAPI contentid, upsert 자연키']
  name varchar(255) [not null]
  overview varchar(3000)
  homepage_url varchar(1000)
  event_time varchar(255)
  address varchar(255)
  detail_address varchar(255)
  event_start_date date
  event_end_date date
  latitude double [note: 'TourAPI mapy']
  longitude double [note: 'TourAPI mapx']
  ldong_regn_cd varchar(255) [note: 'Region 조인 키(광역)']
  ldong_signgu_cd varchar(255) [note: 'Region 조인 키(시군구)']
  content_type_id varchar(255)
  lcls_systm2 varchar(255) [note: '중분류(축제/공연/행사)']
  lcls_systm3 varchar(255) [note: '소분류']
  tour_modified_at timestamp [note: 'modifiedtime, 상세 배치 델타 기준']
  thumbnail_url varchar(1000) [note: '대표이미지 썸네일 URL, TourAPI firstimage2']
  created_at timestamp [not null]
  updated_at timestamp [not null]
}

Table point_histories {
  point_history_id bigint [pk, increment]
  member_id bigint [not null, ref: > members.member_id, note: '포인트 수령자(게시글 작성자) — id-only 참조']
  amount int [not null, note: '적립 점수 (적립 시점 정책 점수 보존, PointType.amount)']
  actor_id bigint [not null, ref: > members.member_id, note: '행위자(좋아요/북마크 누른 사람, 게시는 작성자 본인) — id-only 참조']
  source_id bigint [not null, ref: > posts.post_id, note: '적립 트리거 대상(현재는 게시글 ID) — id-only 참조']
  point_type varchar(30) [not null, note: '적립 사유 (POST_PUBLISH/LIKE_RECEIVED/BOOKMARK_RECEIVED)']
  created_at timestamp [not null, note: 'append-only 원장 — updated_at/deleted_at 없음']

  indexes {
    (actor_id, source_id, point_type) [unique, name: 'uk_point_histories_actor_source_type'] // 1인당 1회 멱등키(취소/토글 재적립 없음)
  }
}

Table regions {
  region_id bigint [pk, increment]
  ldong_regn_cd varchar(255) [not null]
  ldong_signgu_cd varchar(255) [not null]
  regn_name varchar(255) [not null]
  signgu_name varchar(255) [not null]
  created_at timestamp [not null]
  updated_at timestamp [not null]

  indexes {
    (ldong_regn_cd, ldong_signgu_cd) [unique, name: 'uk_regions_area_sigungu']
  }
}

Table post_index_dirties {
  post_id bigint [pk, ref: > posts.post_id, note: '재색인 대상 게시글(글당 1행, upsert 자연키) — id-only 참조']
  version bigint [not null, note: 'ES external version 겸 삭제 가드 토큰 (markDirty마다 +1 단조 증가)']
  retry_count int [not null, note: '색인 연속 실패 횟수 (백오프/격리 판단)']
  dirtied_at timestamp [not null, note: '마지막 더티 시각 (처리 순서/관측용)']
  next_retry_at timestamp [null, note: '다음 재시도 가능 시각 (NULL=즉시 처리 대상, 값=백오프 대기)']
}

// Flyway가 생성/관리하는 마이그레이션 이력 테이블 (앱 엔티티 아님) — baseline-on-migrate, ddl-auto=validate
Table flyway_schema_history {
  installed_rank int [pk, note: '적용 순서(PK)']
  version varchar(50) [note: '마이그레이션 버전(V1, V2...). baseline/repeatable은 null']
  description varchar(200) [not null]
  type varchar(20) [not null, note: 'SQL / BASELINE 등']
  script varchar(1000) [not null, note: '마이그레이션 파일명']
  checksum int [note: '스크립트 체크섬 — 적용 후 변경 감지(변경 시 validate 실패)']
  installed_by varchar(100) [not null]
  installed_on timestamp [not null, default: `now()`]
  execution_time int [not null, note: '실행 시간(ms)']
  success boolean [not null, note: '성공 여부']

  indexes {
    success [name: 'flyway_schema_history_s_idx']
  }
}

// id-only 연관관계 (DB FK 없음, 앱 레벨 조인) — dbdiagram 시각화용 명시 Ref
// festivals ↔ regions : 법정동 복합키(광역+시군구)로 조인 (LEFT JOIN, 매칭 없어도 축제는 노출)
Ref: festivals.(ldong_regn_cd, ldong_signgu_cd) > regions.(ldong_regn_cd, ldong_signgu_cd)

// ===== 채팅 (AI 대화) =====

Enum message_role {
  USER
  ASSISTANT
}

Enum message_status {
  COMPLETED
  INTERRUPTED
  FAILED
}

Table chat_rooms {
  chat_room_id bigint [pk, increment]
  member_id bigint [not null, ref: > members.member_id, note: 'id-only 참조(DB FK 없음)']
  title varchar(255) [not null, note: '대화 제목(첫 질문 요약, 목록 표시용)']
  created_at timestamp [not null]
  updated_at timestamp [not null, note: '최근 대화순 정렬']
}

Table chat_messages {
  chat_message_id bigint [pk, increment]
  chat_room_id bigint [not null, ref: > chat_rooms.chat_room_id, note: 'id-only 참조(DB FK 없음). 방이 메시지를 소유(애그리거트)']
  content text [not null, note: '메시지 내용']
  message_role message_role [not null, note: '화자(USER/ASSISTANT)']
  message_status message_status [not null, note: '스트림 상태(완료/실패/중단)']
  created_at timestamp [not null]
  // referenced_ids/referenced_type: AI Done 계약(타입 포함) 확정 후 추가 예정 — 근거 게시글/축제
}
